--- a/config/prh.yml
+++ b/config/prh.yml
@@ -27,7 +27,7 @@ rules:
 #TechBoosterから
   - expected: ひとつ
     pattern:  一つ
-    prh: 通常は、ひとつ。数詞は１つ、漢数字は数えられる固有名詞を指す場合に利用します
+    prh: 通常は、ひとつ。数詞は１つ、漢数字は数えられる固有名詞を指す場合に利用
   - expected: ふたつ
     pattern:  二つ
     prh: 通常は、ふたつ。数詞は１つ、漢数字は数えられる固有名詞を指す場合に利用
