--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
-    "name": "review-docker-skeleton",
-    "version": "1.0.0",
-    "description": "minimal publishing environment",
-    "main": "index.js",
-    "scripts": {
-        "postinstall": "gulp init",
-        "init": " echo hello && gulp init",
-        "lint": "gulp lint",
-        "pdf": "gulp pdf",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "del": "^2.2.1",
-        "fs-extra": "^0.30.0",
-        "gulp": "^3.9.1",
-        "gulp-shell": "^0.5.2",
-        "prh": "^1.0.1",
-        "textlint": "^7.0.1",
-        "textlint-plugin-review": "^0.3.3",
-        "textlint-rule-incremental-headers": "^0.2.0",
-        "textlint-rule-ja-no-abusage": "^1.1.0",
-        "textlint-rule-ja-no-mixed-period": "^1.0.2",
-        "textlint-rule-ja-no-successive-word": "^1.0.1",
-        "textlint-rule-ja-no-weak-phrase": "^1.0.2",
-        "textlint-rule-max-ten": "^2.0.1",
-        "textlint-rule-no-double-negative-ja": "^1.0.4",
-        "textlint-rule-no-doubled-conjunction": "^1.0.2",
-        "textlint-rule-no-doubled-conjunctive-particle-ga": "^1.0.2",
-        "textlint-rule-no-doubled-joshi": "^3.3.0",
-        "textlint-rule-no-dropping-the-ra": "^1.0.2",
-        "textlint-rule-no-hankaku-kana": "^1.0.1",
-        "textlint-rule-no-mix-dearu-desumasu": "^3.0.2",
-        "textlint-rule-no-todo": "^2.0.0",
-        "textlint-rule-preset-jtf-style": "^2.2.0",
-        "textlint-rule-prh": "^3.1.1"
-    }
+  "name": "review-docker-skeleton",
+  "version": "2.0.0",
+  "description": "minimal publishing environment",
+  "main": "index.js",
+  "scripts": {
+    "init": "review-init articles",
+    "lint": "npm run lint:clean && npm run lint:copy && npm run lint:textlint",
+    "lint:clean": "rimraf tmp",
+    "lint:copy": "cpx articles/**/*.re tmp",
+    "lint:textlint": "textlint tmp ",
+    "pdf": "npm run pdf:clean && npm run pdf:build",
+    "pdf:clean": "rimraf articles/book-pdf && rimraf articles/book.pdf",
+    "pdf:build": "cd articles && review-pdfmaker config.yml && cd ../",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "cpx": "^1.5.0",
+    "prh": "^1.0.1",
+    "rimraf": "^2.6.2",
+    "textlint": "^7.0.1",
+    "textlint-plugin-review": "^0.3.3",
+    "textlint-rule-incremental-headers": "^0.2.0",
+    "textlint-rule-ja-no-abusage": "^1.1.0",
+    "textlint-rule-ja-no-mixed-period": "^1.0.2",
+    "textlint-rule-ja-no-successive-word": "^1.0.1",
+    "textlint-rule-ja-no-weak-phrase": "^1.0.2",
+    "textlint-rule-max-ten": "^2.0.1",
+    "textlint-rule-no-double-negative-ja": "^1.0.4",
+    "textlint-rule-no-doubled-conjunction": "^1.0.2",
+    "textlint-rule-no-doubled-conjunctive-particle-ga": "^1.0.2",
+    "textlint-rule-no-doubled-joshi": "^3.3.0",
+    "textlint-rule-no-dropping-the-ra": "^1.0.2",
+    "textlint-rule-no-hankaku-kana": "^1.0.1",
+    "textlint-rule-no-mix-dearu-desumasu": "^3.0.2",
+    "textlint-rule-no-todo": "^2.0.0",
+    "textlint-rule-preset-jtf-style": "^2.2.0",
+    "textlint-rule-prh": "^3.1.1"
+  }
 }
